# dpai

./: .gitignore  .readthedocs.yml  LICENSE  MANIFEST.in  Makefile  README.md  folder_structure.ipynb  pre-commit-config.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  lint.yml  python-package.yml  release.yml  wheels.yml
application/: .dockerignore  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  requirements.dev.txt  requirements.txt  setup.py
application/application/: __main__.py
application/application/mains/: rest_service.py
application/application/services/: auth.py  cli.py  context.py
application/application/services/models/: data_models.py
application/application/services/rest/: factories.py
application/application/services/rest/routes/: health.py  predict.py
application/application/utilities/: auth_utils.py  logging_utils.py  object_store.py  resource_utils.py  string_utils.py
application/config/: logging.yaml
application/deployment/: Jenkinsfile
application/docker/: Dockerfile
application/entrypoints/services/: run_rest.sh  run_service.sh
application/entrypoints/tests/: flake.sh  unit.sh
application/resources/: README.md
application/tests/clients/: conftest.py  rest_client_test.py
application/tests/io/apis/controllers/: api_calls_test.py  other_calls_test.py
application/tests/services/: cli_test.py  conftest.py
docs/source/: advanced.rst  basic_usage.rst  conf.py  contact.rst  dpai.rst  index.rst  installation.rst  license.rst  thanks.rst
src/dpai/: README.md  TODO.md  __init__.py  fastapi_main.py  main.py  model_manager.py  temp.ipynb  utils.py
src/dpai/configs/: logging_config.ini
src/dpai/model_db/: crud.py  db_setup.py  models.py
tests/: test_fastapi_main.py  test_model_db_crud.py  test_model_manager.py  test_utils.py
